Testing all branches workflow
Used notation - '*' to test workflow to all branches.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,8 +7,9 @@ on:
   workflow_dispatch:
   push:
     branches:
-    - main
-    - TestingInitial
+      - '*'
+    #- main
+    #- TestingInitial
     - release/*
   pull_request:
     branches: [ "main" ]
