--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "bootstrap": "^5.3.8",
     "react": "^19.1.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1"
-
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
