--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "bootstrap": "^5.3.8",
+    "mapbox-gl": "^3.15.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
+    "react-map-gl": "^7.0.15",
     "react-router-dom": "^7.9.1"
   },
   "devDependencies": {
