--- a/.gitignore
+++ b/.gitignore
@@ -143,3 +143,10 @@ vite.config.ts.timestamp-*
 # Version difference
 package.json
 package-lock.json
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
